# Landed-Cost-Lookup

./: IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: release.yml
landed-cost-modern/: REFACTORING_CHUNK1_COMPLETE.md  REFACTORING_CHUNK2_COMPLETE.md  REFACTORING_CHUNK3_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  TEMPLATE_GUIDE.md  create-icons.ps1  generate-icon.html  generate-icons.js  index.html  package-lock.json  package.json  vite.config.ts
landed-cost-modern/src/: App.tsx  constants.ts  index.css
landed-cost-modern/src-tauri/: Cargo.toml  tauri.conf.json
landed-cost-modern/src-tauri/capabilities/: main-capability.json
landed-cost-modern/src-tauri/icons/: icon.icns
landed-cost-modern/src-tauri/src/: lib.rs  main.rs
landed-cost-modern/src/components/: ColumnBlock.tsx  LookupIcon.tsx  index.ts
landed-cost-modern/src/components/SupplyChain/: SupplyChainModal.tsx  index.ts
landed-cost-modern/src/components/modals/: HelpModal.tsx  ThemePickerModal.tsx  index.ts
landed-cost-modern/src/hooks/: index.ts  useConfigurations.ts  useDataSources.ts  useFileOperations.ts  useRecentFiles.ts  useSearch.ts  useTemplates.ts
landed-cost-modern/src/themes/: index.ts
landed-cost-modern/src/types/: index.ts
landed-cost-modern/src/utils/: configColumns.ts  fileParser.ts  formatters.ts  index.ts  relationshipDetection.ts  searchIndex.ts  searchUtils.ts  supplyChainTools.ts
