[package]
name = "landed-cost-lookup"
version = "2.0.0"
description = "Landed Cost Lookup Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "landed_cost_lookup_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
